--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
+    "@types/node": "^20.11.30",
     "@types/qs": "^6.9.14",
     "@types/react": "^18.2.67",
     "@types/react-dom": "^18.2.22",
