--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@arco-design/web-react": "^2.61.0",
+    "@arco-design/web-react": "^2.61.1",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
     "qs": "^6.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "xgplayer": "^3.0.14"
   },
   "devDependencies": {
     "@types/node": "^20.11.30",
@@ -27,7 +28,7 @@
     "less": "^4.2.0",
     "prettier": "^3.2.5",
     "typescript": "^5.4.3",
-    "vite": "^5.2.2",
+    "vite": "^5.2.3",
     "vite-plugin-electron": "^0.28.4",
     "vite-plugin-electron-renderer": "^0.14.5",
     "vite-plugin-html": "^3.2.2"
