--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build && electron-builder",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "rebuild": "electron rebuild.js"
   },
   "dependencies": {
     "@arco-design/web-react": "^2.61.1",
     "axios": "^1.6.8",
+    "better-sqlite3": "^9.4.3",
     "dayjs": "^1.11.10",
+    "electron-rebuild": "^3.2.9",
     "qs": "^6.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -19,13 +22,14 @@
     "xgplayer": "^3.0.14"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.9",
     "@types/node": "^20.11.30",
     "@types/qs": "^6.9.14",
     "@types/react": "^18.2.69",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
-    "electron": "^29.1.5",
-    "electron-builder": "^24.13.3",
+    "electron": "^26.1.0",
+    "electron-builder": "^24.6.3",
     "less": "^4.2.0",
     "prettier": "^3.2.5",
     "typescript": "^5.4.3",
