add history page

--- a/package.json
+++ b/package.json
@@ -6,34 +6,34 @@
     "dev": "vite",
     "build": "tsc && vite build && electron-builder",
     "preview": "vite preview",
-    "rebuild": "electron rebuild.js"
+    "rebuild": "electron-rebuild -f -w better-sqlite3"
   },
   "dependencies": {
-    "@arco-design/web-react": "^2.61.1",
+    "@arco-design/web-react": "^2.61.2",
     "axios": "^1.6.8",
-    "better-sqlite3": "^9.4.3",
+    "better-sqlite3": "^9.4.5",
     "dayjs": "^1.11.10",
-    "electron-rebuild": "^3.2.9",
     "qs": "^6.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "sqlite3": "^5.1.7",
-    "xgplayer": "^3.0.14"
+    "xgplayer": "^3.0.16"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.9",
-    "@types/node": "^20.11.30",
+    "@types/node": "^20.12.4",
     "@types/qs": "^6.9.14",
-    "@types/react": "^18.2.69",
-    "@types/react-dom": "^18.2.22",
+    "@types/react": "^18.2.74",
+    "@types/react-dom": "^18.2.24",
     "@vitejs/plugin-react": "^4.2.1",
-    "electron": "^26.1.0",
-    "electron-builder": "^24.6.3",
+    "electron": "^27.3.8",
+    "electron-builder": "^24.13.3",
+    "@electron/rebuild": "^3.6.0",
     "less": "^4.2.0",
     "prettier": "^3.2.5",
-    "typescript": "^5.4.3",
-    "vite": "^5.2.5",
+    "typescript": "^5.4.4",
+    "vite": "^5.2.8",
     "vite-plugin-electron": "^0.28.4",
     "vite-plugin-electron-renderer": "^0.14.5",
     "vite-plugin-html": "^3.2.2"
