--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "tehaokan-fe",
   "private": true,
   "version": "1.0.0",
+  "author": {
+    "email": "github@mgsk.net",
+    "name": "Alius Lee"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build && electron-builder",
@@ -10,26 +14,30 @@
   },
   "dependencies": {
     "@arco-design/web-react": "^2.61.2",
+    "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "better-sqlite3": "^9.4.5",
     "dayjs": "^1.11.10",
     "qs": "^6.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "sqlite3": "^5.1.7",
     "xgplayer": "^3.0.16"
   },
   "devDependencies": {
+    "@electron/rebuild": "^3.6.0",
     "@types/better-sqlite3": "^7.6.9",
-    "@types/node": "^20.12.4",
+    "@types/node": "^20.12.5",
     "@types/qs": "^6.9.14",
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.24",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react-swc": "^3.6.0",
     "electron": "^29.2.0",
     "electron-builder": "^24.13.3",
-    "@electron/rebuild": "^3.6.0",
     "less": "^4.2.0",
     "prettier": "^3.2.5",
     "typescript": "^5.4.4",
