--- a/package.json
+++ b/package.json
@@ -13,39 +13,37 @@
     "rebuild": "electron-rebuild -f -w better-sqlite3"
   },
   "dependencies": {
-    "@arco-design/web-react": "^2.61.3",
+    "@arco-design/web-react": "^2.62.0",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
-    "better-sqlite3": "^9.5.0",
-    "dayjs": "^1.11.10",
-    "qs": "^6.12.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.3",
+    "better-sqlite3": "^9.6.0",
+    "dayjs": "^1.11.11",
+    "qs": "^6.12.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.23.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
-    "sqlite3": "^5.1.7",
-    "xgplayer": "^3.0.16"
+    "xgplayer": "^3.0.17"
   },
   "devDependencies": {
     "@electron/rebuild": "^3.6.0",
-    "@types/better-sqlite3": "^7.6.9",
-    "@types/node": "^20.12.7",
-    "@types/qs": "^6.9.14",
-    "@types/react": "^18.2.77",
-    "@types/react-dom": "^18.2.25",
+    "@types/better-sqlite3": "^7.6.10",
+    "@types/node": "^20.12.8",
+    "@types/qs": "^6.9.15",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.6.0",
-    "electron": "^29.3.0",
+    "electron": "^30.0.2",
     "electron-builder": "^24.13.3",
     "less": "^4.2.0",
     "prettier": "^3.2.5",
     "typescript": "^5.4.5",
-    "vite": "^5.2.8",
-    "vite-plugin-electron": "^0.28.4",
+    "vite": "^5.2.11",
+    "vite-plugin-electron": "^0.28.7",
     "vite-plugin-electron-renderer": "^0.14.5",
     "vite-plugin-html": "^3.2.2"
   },
-  "main": "dist-electron/main.js",
-  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
+  "main": "dist-electron/main.js"
 }
