--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
   "include": [
     "src",
     "electron",
-    "env.d.ts"
+    "env.d.ts",
+    "electron/preload"
   ],
   "references": [
     {
