--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,7 @@
   "include": [
     "src",
     "electron",
-    "env.d.ts",
-    "electron/preload"
+    "env.d.ts"
   ],
   "references": [
     {
