--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.8",
     "better-sqlite3": "^9.6.0",
     "dayjs": "^1.11.11",
+    "framer-motion": "^11.1.9",
     "qs": "^6.12.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -31,7 +32,7 @@
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@electron/rebuild": "^3.6.0",
     "@types/better-sqlite3": "^7.6.10",
-    "@types/node": "^20.12.8",
+    "@types/node": "^20.12.10",
     "@types/qs": "^6.9.15",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
