--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -3,7 +3,7 @@
  */
 {
   "$schema": "https://raw.githubusercontent.com/electron-userland/electron-builder/master/packages/app-builder-lib/scheme.json",
-  "appId": "YourAppID",
+  "appId": "com.electron.tehaokan",
   "asar": true,
   "productName": "TeHaoKan",
   "directories": {
@@ -11,7 +11,8 @@
   },
   "files": [
     "dist",
-    "dist-electron"
+    "dist-electron",
+    "dist-native"
   ],
   "mac": {
     "target": [
