--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "vite",
     "build": "tsc && vite build && electron-builder",
     "preview": "vite preview",
-    "rebuild": "electron-rebuild -f -w better-sqlite3"
+    "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
     "@arco-design/web-react": "^2.62.0",
@@ -30,14 +30,13 @@
   },
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
-    "@electron/rebuild": "^3.6.0",
     "@types/better-sqlite3": "^7.6.10",
     "@types/node": "^20.12.10",
     "@types/qs": "^6.9.15",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.6.0",
-    "electron": "^30.0.2",
+    "electron": "^29.3.2",
     "electron-builder": "^24.13.3",
     "less": "^4.2.0",
     "prettier": "^3.2.5",
@@ -46,6 +45,10 @@
     "vite-plugin-electron": "^0.28.7",
     "vite-plugin-electron-renderer": "^0.14.5",
     "vite-plugin-html": "^3.2.2"
+  },
+  "engines": {
+    "node": ">=20.0.0",
+    "yarn": ">=1.22.0"
   },
   "main": "dist-electron/main.js"
 }
